--- a/public/assets/index.css
+++ b/public/assets/index.css
@@ -432,7 +432,7 @@ select:not([multiple]) {
   -webkit-background-clip: border-box;
 }
 html.dark select:not([multiple]) {
-  background-image: url("/images/dropdown_arrow_inverted.png");
+  background-image: url("./dropdown_arrow_inverted.png");
 }
 select:focus {
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
